bindata/assets/jobset-controller/networkpolicy-allow-operator.yaml
# Network policy for the jobset-operator pod.
#
# Ingress:
# - Allow ingress on port 8443 (metrics) for Prometheus scraping.
#
# Egress:
# - Allow all egress to support communication with the API server and DNS.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-operator
  namespace: openshift-jobset-operator
spec:
  podSelector:
    matchLabels:
      name: jobset-operator
  ingress:
  - ports:
    - protocol: TCP
      port: 8443
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
